--- a/thapa-codefest/src/App.css
+++ b/thapa-codefest/src/App.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Pacifico&family=Rubik+Marker+Hatch&display=swap');
 *{
   padding: 0;
   margin: 0;
+  font-family: 'Lato', sans-serif;
 }
