--- a/thapa-codefest/src/App.css
+++ b/thapa-codefest/src/App.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Pacifico&family=Rubik+Marker+Hatch&display=swap');
-*{
+*{box-sizing: border-box;
   padding: 0;
   margin: 0;
   font-family: 'Lato', sans-serif;
