--- a/thapa-codefest/src/App.css
+++ b/thapa-codefest/src/App.css
@@ -7,7 +7,16 @@
 .main-page{
   height: 100vh;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 .main-page::-webkit-scrollbar{
-  display: none;
+  /* display: none;
+   */
+   width: 2px;
+   background-color:transparent;
+   border-radius:5px;
+  }
+  .main-page::-webkit-scrollbar-thumb{
+  border-radius:5px;
+  background-color: blueviolet;
 }
